# PC-Care

./: .gitignore  App.xbf  Cargo.toml  Directory.Build.props  Directory.Packages.props  MainWindow.xbf  PCCare.pri  README.md  README.txt  SmartPerformanceDoctor.deps.json  SmartPerformanceDoctor.sln  UPDATE_CHANNEL.json  release-manifest.json
Controls/: MacNavigationButton.xbf  MacTrafficLights.xbf  WindowsWindowControls.xbf
Resources/: LogLayoutGuard.xbf  MacDesignFallback.xbf  MacDesignTokens.xbf
Styles/: Animations.xbf  Theme.xbf
Views/: AdvancedCenterPage.xbf  AppDiagnosticsPage.xbf  AudioRepairPage.xbf  CrashLogPage.xbf  DashboardPage.xbf  DeepScanSetupPage.xbf  DriverRepairPage.xbf  ErrorBundlePage.xbf  EvidenceExplorerPage.xbf  FeatureManagementPage.xbf  FinalLockPage.xbf  FirstRunPage.xbf  IntelligenceCenterPage.xbf  KnowledgePackManagerPage.xbf  MacDashboardPage.xbf  ModulePage.xbf  ProgramProtectionCenterPage.xbf  ProgressHudPage.xbf  ProtocolCenterPage.xbf  ReportPage.xbf  (+14 more)
src/SmartPerformanceDoctor.Core/: Cargo.toml
src/SmartPerformanceDoctor.Core/src/: lib.rs  main.rs
src/SmartPerformanceDoctor.Core/src/engine/: audio.rs  command_runner.rs  dism_guard.rs  driver.rs  event_sink.rs  intelligence.rs  mod.rs  orchestrator.rs  report.rs  report_writer.rs  rules_loader.rs  security.rs  selftest.rs  stage_labels.rs  system.rs  tasks.rs  types.rs
src/SmartPerformanceDoctor.Core/src/windows/: audio_api.rs  device_api.rs  mod.rs  service_control.rs
src/SmartPerformanceDoctor.RepairHelper/: Cargo.toml
src/SmartPerformanceDoctor.RepairHelper/src/: main.rs
(+965 files in other folders)
