[package]
name = "smart_performance_doctor_repair_helper"
version = "51.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_System_SystemServices",
  "Win32_System_SystemInformation"
] }
